[package]
name = "how2cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
llm = { git = "https://github.com/rustformers/llm" , branch = "main", features = ["metal"]}
clap = { version = "4.4.7", features = ["derive"] }
rand = "0.8.5"

[profile.dev.package.ggml-sys]
opt-level = 3